--- a/indexfoga.html
+++ b/indexfoga.html
@@ -12,7 +12,7 @@
 <img src= "C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_9644.jpg" width="350" height="530">
 <img src= "C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_2339.jpg" width="350" height="530">
 <img src= "C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_3233.jpg" width="350" height="530">
-<img src= "C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_0341.jpg" width="350" height="530">
+<img src= "https://github.com/Topkicz/OsobniWeb/blob/main/IMG_0341.jpg?raw=true" width="350" height="530">
 <img src= "C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_1635.jpg" width="350" height="530">
 <img src= "C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_5467.jpg" width="350" height="530">
 <img src= "C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_5894.jpg" width="350" height="530">
@@ -39,3 +39,4 @@
 
 </body>
 </html>
+
