--- a/indexfoga.html
+++ b/indexfoga.html
@@ -10,10 +10,10 @@
 <img src="C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_3852.jpg" width="350" height="530">
 <img src= "C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_4289.jpg" width="350" height="530">
 <img src= "C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_9644.jpg" width="350" height="530">
-<img src= "C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_2339.jpg" width="350" height="530">
+<img src= "https://github.com/Topkicz/OsobniWeb/blob/main/IMG_2339.jpg" width="350" height="530">
 <img src= "C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_3233.jpg" width="350" height="530">
 <img src= "https://github.com/Topkicz/OsobniWeb/blob/main/IMG_0341.jpg" width="350" height="530">
-<img src= "C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_1635.jpg" width="350" height="530">
+<img src= "https://github.com/Topkicz/OsobniWeb/blob/main/IMG_1635.jpg" width="350" height="530">
 <img src= "C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_5467.jpg" width="350" height="530">
 <img src= "C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_5894.jpg" width="350" height="530">
 <img src= "C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_5982.jpg" width="350" height="530">
@@ -22,12 +22,12 @@
 <img src= "C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_8219.jpg" width="350" height="530">
 <img src= "C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_8674.jpg" width="350" height="530">
 <img src= "C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_8925.jpg" width="350" height="530">
-<img src= "C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_2830.jpg" width="600" height="400">
+<img src= "https://github.com/Topkicz/OsobniWeb/blob/main/IMG_2830.jpg" width="600" height="400">
 <img src= "C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_5702.jpg" width="600" height="400">
 <img src= "C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_5778.jpg" width="600" height="400">
-<img src= "C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_1034.jpg" width="600" height="400">
-<img src= "C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_2621.jpg" width="600" height="400">
-<img src= "C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_2953.jpg" width="600" height="400">
+<img src= "https://github.com/Topkicz/OsobniWeb/blob/main/IMG_1034.jpg" width="600" height="400">
+<img src= "https://github.com/Topkicz/OsobniWeb/blob/main/IMG_2621.jpg" width="600" height="400">
+<img src= "https://github.com/Topkicz/OsobniWeb/blob/main/IMG_2953.jpg" width="600" height="400">
 <img src= "C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_7315.jpg" width="600" height="400">
 <img src= "C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_9060.jpg" width="600" height="400">
 <img src= "C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_5375.jpg" width="600" height="400">
@@ -39,5 +39,6 @@
 
 </body>
 </html>
+
 
 
