--- a/indexfoga.html
+++ b/indexfoga.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<h2>Fotogalerie</h2>
-<img src="C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_3852.jpg" width="350" height="530">
+<img src="https://github.com/Topkicz/OsobniWeb/blob/main/IMG_3852.jpg?raw=true" width="350" height="530">
 <img src= "C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_4289.jpg" width="350" height="530">
 <img src= "C:\Users\Štěpán\Desktop\Files\Škola\Hulicka\moje webovky\Obrazky\IMG_9644.jpg" width="350" height="530">
 <img src= "https://github.com/Topkicz/OsobniWeb/blob/main/IMG_2339.jpg" width="350" height="530">
@@ -39,6 +39,7 @@
 
 </body>
 </html>
+
 
 
 
